Project

General

Profile

Actions

Bug #43178

closed

rbd_open_by_id/rbd_open_by_id_read_only incorrectly delete ImageCtx on error

Added by Jason Dillaman over 4 years ago. Updated about 4 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
luminous,mimic,nautilus
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

This will result in a double-free and a crash.


Related issues 3 (0 open3 closed)

Copied to rbd - Backport #43236: luminous: rbd_open_by_id/rbd_open_by_id_read_only incorrectly delete ImageCtx on errorRejectedActions
Copied to rbd - Backport #43237: nautilus: rbd_open_by_id/rbd_open_by_id_read_only incorrectly delete ImageCtx on errorResolvedNathan CutlerActions
Copied to rbd - Backport #43238: mimic: rbd_open_by_id/rbd_open_by_id_read_only incorrectly delete ImageCtx on errorResolvedNathan CutlerActions
Actions #1

Updated by Jason Dillaman over 4 years ago

  • Status changed from New to Pending Backport
  • Pull request ID set to 32105
Actions #2

Updated by Nathan Cutler over 4 years ago

  • Copied to Backport #43236: luminous: rbd_open_by_id/rbd_open_by_id_read_only incorrectly delete ImageCtx on error added
Actions #3

Updated by Nathan Cutler over 4 years ago

  • Copied to Backport #43237: nautilus: rbd_open_by_id/rbd_open_by_id_read_only incorrectly delete ImageCtx on error added
Actions #4

Updated by Nathan Cutler over 4 years ago

  • Copied to Backport #43238: mimic: rbd_open_by_id/rbd_open_by_id_read_only incorrectly delete ImageCtx on error added
Actions #5

Updated by Jason Dillaman about 4 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF