librbd: fix rbd_open_by_id, rbd_open_by_id_read_only incorrectly delete ImageCtx on error

Fixs: https://tracker.ceph.com/issues/43178

Signed-off-by: yangjun <yangjun@cmss.chinamobile.com>